--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
-Package: RJDBC
-Version: 0.2-5
-Title: Provides access to databases through the JDBC interface
-Author: Simon Urbanek <Simon.Urbanek@r-project.org>
-Maintainer: Simon Urbanek <Simon.Urbanek@r-project.org>
+Package: RPSQL
+Version: 1-a
+Title: Provides access to apache phoenix database through the JDBC interface
+Author: Amith Kumar M K <mkamithkumar@gmail.com>
+Maintainer: Amith Kumar M K <mkamithkumar@gmail.com>
 Depends: methods, DBI, rJava (>= 0.4-15), R (>= 2.4.0)
-Description: RJDBC is an implementation of R's DBI interface using JDBC as a back-end. This allows R to connect to any DBMS that has a JDBC driver.
+Description: RPSQL is an implementation of R's DBI interface using JDBC as a back-end. This allows R to connect to apache phoenix DBMS that has a JDBC driver.
 License: GPL-2
-URL: http://www.rforge.net/RJDBC/
+URL: https://github.com/itsamiths/RPSQL
