--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,6 @@
 Package: RPSQL
-Version: 1
+Version: 0.0-0
+Date:2014-12-05
 Title: Provides access to apache phoenix database through the JDBC interface
 Author: Amith Kumar M K <mkamithkumar@gmail.com>
 Maintainer: Amith Kumar M K <mkamithkumar@gmail.com>
